[package]
# The GUI (library + settings). Directory stays `crates/settings` (git history); the binary and
# package are `rewynd` so what a user installs and launches is `rewynd`, opening the library.
name = "rewynd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "The rewynd app window: the clip library plus the settings editor (iced GUI)."

[dependencies]
# Also the clip store (listing + output-dir resolution): it lives in the config crate so this
# deliberately GPU-free build never touches the saver's ring-buffer/encoder (wgpu) tree
# (docs/adr/0006).
rewynd-config.workspace = true
# The MP4 read side: clip summary + first keyframe for thumbnails (docs/adr/0013).
rewynd-mux.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Runs the stop-and-relaunch off the UI thread (spawn_blocking) so the window never freezes.
tokio.workspace = true

# iced with the tiny-skia SOFTWARE renderer only (no wgpu): the workspace's wgpu-v29
# [patch.crates-io] rewrite can't bite a tree with no wgpu, and a settings window doesn't need
# the GPU. See docs/adr/0006. `wayland` + `x11` enable winit's and softbuffer's Linux backends
# (dropping default features dropped them); `tokio` drives the rfd dialog future.
iced = { version = "0.14", default-features = false, features = [
    "tiny-skia",
    "tokio",
    "wayland",
    "x11",
    # The custom trim-bar widget (docs/adr 0006 keeps us on the software renderer) is built on
    # `iced::advanced`.
    "advanced",
    # Raster brand mark. Deliberately NOT `svg`: iced's svg path (resvg) scans every system
    # font on the first draw, and NOT `image`: that turns on every codec in the image crate.
    "image-without-codecs",
] }
# PNG decode for the brand mark and window icon (codec choice stays ours: png only).
image.workspace = true
# Folder picker via the XDG Desktop Portal (no GTK build dep), matching our portal-based capture.
# The async dialog future is executor-agnostic — iced's tokio executor drives it.
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
# ganked.tv device login (docs/adr/0009): the settings window drives the in-app login flow.
rewynd-upload.workspace = true
# Opens the approval page in the user's browser.
open = "5"
# One notification ("settings already open") from the refused second instance; shares the
# zbus stack rfd already pulls.
notify-rust = "4"
# CPU H.264 decode for library thumbnails (docs/adr/0013). BSD-2-Clause; the default `source`
# feature compiles Cisco's openh264 from vendored source (decode-only use here).
openh264 = "0.9"
# The thumbnail disk cache lives under the user cache dir.
dirs = "6"
# Auto-refresh: watch the clips directory (and its per-game subfolders) so a clip saved with the
# hotkey while the library is open appears without a manual refresh.
notify = "8"
# Local-time "saved at" labels on the library cards.
jiff.workspace = true

[dev-dependencies]
tempfile.workspace = true
