[package]
name = "rewynd-upload"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "ganked.tv upload client: API-key auth over the 3-step presigned upload flow."

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs", "time", "net", "io-util"] }
sha2.workspace = true
base64.workspace = true
getrandom.workspace = true
# Reads a clip's container duration for the client-side length pre-check (the
# vendored muxer fork the rest of the workspace already uses).
mp4.workspace = true
# Local-time default clip titles, shared by every upload surface.
jiff.workspace = true

[dev-dependencies]
# Synthesize real MP4s for the clip-length pre-check tests.
rewynd-mux.workspace = true
rewynd-buffer.workspace = true
# test-util pauses tokio's clock so the device-login polling tests run instantly.
tokio = { workspace = true, features = ["fs", "time", "macros", "rt-multi-thread", "test-util"] }
wiremock.workspace = true
